--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 	
 	<!-- css files -->
-    <!-- <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />bootstrap css -->
+    href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- <link bootstrap css -->
     
-   <!-- <link href="css/font-awesome.min.css" rel="stylesheet"> fontawesome css -->
+   <link href="css/font-awesome.min.css" rel="stylesheet"> <!-- fontawesome css -->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	
+	<!--  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	 -->
 	<!-- //css files -->
 	
 	<!-- google fonts -->
