--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 	
 	<!-- css files -->
-    href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- <link bootstrap css -->
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!--  bootstrap css -->
     
    <link href="css/font-awesome.min.css" rel="stylesheet"> <!-- fontawesome css -->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
