--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Task Corporate Category Flat Bootstrap Responsive Web Template | Home :: w3layouts</title>
+<title>Tron Price</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Task Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-
+<meta name="keywords" content="tron" />
     <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
@@ -19,21 +17,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
 	
 	<!-- css files -->
-    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!--  bootstrap css -->
-    
-   <link href="css/font-awesome.min.css" rel="stylesheet"> <!-- fontawesome css -->
+	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
-	<!--  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	 -->
-	<!-- //css files -->
-	
-	<!-- google fonts -->
 	<link href="//fonts.googleapis.com/css?family=Alegreya+Sans:100,100i,300,300i,400,400i,500,500i,700,700i,800,800i,900,900i" rel="stylesheet">
-	<!-- //google fonts -->
-	
+
 </head>
 <body>
-
 <!-- //header -->
 <header>
 	<div class="container">
@@ -65,6 +55,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="banner-text">
 			<div class="slider-info">
+				<div class="row">
+					<div class="col-md-6" style="border: 1px solid #fff;">
+					</div>
+					<div class="col-md-6">
+					</div>
 				<div class="agileinfo-logo mt-lg-5">
 					<h2>Manage Your Team Work In An Easy Way</h2>
 					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
