--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,9 @@
 		<div class="banner-text">
 			<div class="slider-info">
 				<div class="row">
-					<div class="col-md-6" style="border: 1px solid #fff;">
+					<div class="col-md-12 upper" style="border: 1px solid #fff;">
 					</div>
-					<div class="col-md-6">
-					</div>
+
 				<div class="agileinfo-logo mt-lg-5">
 					<h2>Manage Your Team Work In An Easy Way</h2>
 					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
