--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,13 @@
 		<div class="banner-text">
 			<div class="slider-info">
 				<div class="row">
-					<div class="col-md-12 upper" style="border: 1px solid #fff;">
+					<div class="col-md-12 upper" style="border: 1px solid #fff;height: 100px;">
+						<div class="col-md-3">
+							<span id="name"></span>
+						</div>
+						<div class="col-md-6">
+							<span id="price"></span>
+						</div>
 					</div>
 
 				<div class="agileinfo-logo mt-lg-5">
@@ -321,6 +327,8 @@
 	</div>
 </div>
 <!-- //popup -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="/js/price.js"></script>	
 </body>
 </html>
