--- a/public/index.html
+++ b/public/index.html
@@ -56,13 +56,15 @@
 		<div class="banner-text">
 			<div class="slider-info">
 				<div class="row">
-					<div class="col-md-12 upper" style="border: 1px solid #fff;height: 100px;">
+					<div class="col-md-12 uper" style="border: 1px solid #fff;height: 100px;">
+					<div class="row">
 						<div class="col-md-3">
 							<span id="name"></span>
 						</div>
 						<div class="col-md-6">
 							<span id="price"></span>
 						</div>
+					</div>
 					</div>
 
 				<div class="agileinfo-logo mt-lg-5">
