--- a/public/index.html
+++ b/public/index.html
@@ -58,10 +58,10 @@
 				<div class="row">
 					<div class="col-md-12 uper" style="border: 1px solid #fff;height: 100px;">
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-md-3 mid-top">
 							<span id="name"></span>
 						</div>
-						<div class="col-md-6">
+						<div class="col-md-6 mid-top">
 							<span id="price"></span>
 						</div>
 					</div>
