--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,11 @@
 						<div class="col-md-3 mid-top">
 							<span id="name"></span>
 						</div>
-						<div class="col-md-6 mid-top">
+						<div class="col-md-6 mid-top" style="font-family: Open Sans;">
 							<span id="price"></span>
+						</div>
+						<div class="col-md-6 mid-top">
+							<span id="change"></span>
 						</div>
 					</div>
 					</div>
