--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 						<div class="col-md-3 mid-top">
 							<span id="name"></span>
 						</div>
-						<div class="col-md-6 mid-top md-price">
+						<div class="col-md-6 mid-top mid-price">
 							<span id="price"></span>
 						</div>
 						<div class="col-md-3 mid-top">
