--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,36 @@
 							<span id="change"></span>
 						</div>
 					</div>
+					<div class="row">
+						<div class="col-md-3 mid-top">
+							<span id="name"></span>
+						</div>
+						<div class="col-md-9">
+							<center><div class="tradingview-widget-container">
+  							<div id="tradingview_1f962"></div>
+  								<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/BINANCE-TRXUSD/" rel="noopener" target="_blank"><span class="blue-text">TRXUSD chart</span></a> by TradingView</div>
+  								<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+								  <script type="text/javascript">
+ 									 new TradingView.widget(
+									  {
+									  "width": '80%',
+									  "height": 510,
+									  "symbol": "BINANCE:TRXUSD",
+									  "interval": "D",
+									  "timezone": "Etc/UTC",
+									  "theme": "Dark",
+									  "style": "1",
+									  "locale": "en",
+									  "toolbar_bg": "#f1f3f6",
+									  "enable_publishing": false,
+									  "hide_legend": true,
+									  "container_id": "tradingview_1f962"
+									  	}
+									   );
+								     </script>
+  							</center>
+						</div>
+					</div>	
 					</div>
 
 				<div class="agileinfo-logo mt-lg-5">
