--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,17 @@
 						</div>
 					</div>
 					<div class="row">
+						<div class="col-md-4 mid-top">
+							<span id="name"></span>
+						</div>
+						<div class="col-md-4 mid-top mid-price">
+							<span id="price"></span>
+						</div>
+						<div class="col-md-4 mid-top">
+							<span id="change"></span>
+						</div>
+					</div>	
+					<div class="row">
 						<div class="col-md-3 mid-top">
 							<span id="name"></span>
 						</div>
