--- a/public/index.html
+++ b/public/index.html
@@ -69,13 +69,20 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-4 mid-top">
-							<span id="name"></span>
+						<div class="col-md-4">
+							<div class="form-group">
+                              					<div class="input-group mb-3">
+                                				<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
+                              						<div class="input-group-append">
+                                						<div class="input-group-text" id="basic-addon"> TRX</div>
+                             						 </div>
+                             					</div>
+                           				 </div>
 						</div>
-						<div class="col-md-4 mid-top mid-price">
+						<div class="col-md-4">
 							<span id="price"></span>
 						</div>
-						<div class="col-md-4 mid-top">
+						<div class="col-md-4">
 							<span id="change"></span>
 						</div>
 					</div>	
