--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,10 @@
 						<div class="col-md-4">
 							<div class="form-group">
                               					<div class="input-group mb-3">
-                                				<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
-                              						<div class="input-group-append">
-                                						<div class="input-group-text" id="basic-addon"> TRX</div>
-                             						 </div>
+									<div class="input-group-prepend">
+										<div class="input-group-text" id="basic-addon" style="background-color: #ffc168;"> 24 Hours High</div>	
+                                						<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
+                             						</div>
                              					</div>
                            				 </div>
 						</div>
@@ -87,7 +87,7 @@
 						</div>
 					</div>	
 					<div class="row">
-						<div class="col-md-3 mid-top">
+						<div class="col-md-3 mid-top" style="background:#ffc168;height:510px;">
 							<span id="name"></span>
 						</div>
 						<div class="col-md-9">
