--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,8 @@
 		<div class="banner-text">
 			<div class="slider-info">
 				<div class="row">
-					<div class="col-md-12 uper" style="border: 1px solid #fff;height: 100px;">
-					<div class="row">
+					<div class="col-md-12">
+					<div class="row uper">
 						<div class="col-md-3 mid-top">
 							<span id="name"></span>
 						</div>
