--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 			<div class="slider-info">
 				<div class="row">
 					<div class="col-md-12">
-					<div class="row uper">
+					<div class="row uper" style="padding-bootm:12px;">
 						<div class="col-md-3 mid-top">
 							<span id="name"></span>
 						</div>
@@ -74,8 +74,8 @@
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
 										<div class="input-group-text" id="basic-addon" style="background-color: #ffc168;"> 24 Hours High</div>	
-                                						<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
-                             						</div>
+                                					</div>
+									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
                            				 </div>
 						</div>
