--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
 			<div class="slider-info">
 				<div class="row">
 					<div class="col-md-12">
-					<div class="row uper" style="padding-bootm:12px;">
+					<div class="row uper" style="padding-bottom:12px;">
 						<div class="col-md-3 mid-top">
 							<span id="name"></span>
 						</div>
@@ -68,7 +68,7 @@
 							<span id="change"></span>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row" style="padding:15px;">
 						<div class="col-md-4">
 							<div class="form-group">
                               					<div class="input-group mb-3">
