--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-										<div class="input-group-text" id="basic-addon" style="background-color: #000000;border-color:#000000;color:#fff;"> 24 Hours High</div>	
+										<div class="input-group-text" id="basic-addon mid-mid"> 24 Hours High</div>	
                                 					</div>
 									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
