--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="tron" />
-    <script>
+	
+   <!--  <script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
         }, false);
@@ -14,7 +15,7 @@
         function hideURLbar() {
             window.scrollTo(0, 1);
         }
-    </script>
+    </script> -->
 	
 	<!-- css files -->
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
@@ -80,10 +81,24 @@
                            				 </div>
 						</div>
 						<div class="col-md-4">
-							<span id="price"></span>
+							<div class="form-group">
+                              					<div class="input-group mb-3">
+									<div class="input-group-prepend">
+										<div class="input-group-text" id="basic-addon mid-mid"> 24 Hours Low</div>	
+                                					</div>
+									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
+                             					</div>
+                           				 </div>
 						</div>
 						<div class="col-md-4">
-							<span id="change"></span>
+							<div class="form-group">
+                              					<div class="input-group mb-3">
+									<div class="input-group-prepend">
+										<div class="input-group-text" id="basic-addon mid-mid"> 24 Hours Average</div>	
+                                					</div>
+									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
+                             					</div>
+                           				 </div>
 						</div>
 					</div>	
 					<div class="row">
