--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-										<div class="input-group-text" id="basic-addon mid-mid"> 24 Hours High</div>	
+										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours High</div>	
                                 					</div>
 									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
@@ -84,7 +84,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-										<div class="input-group-text" id="basic-addon mid-mid"> 24 Hours Low</div>	
+										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Low</div>	
                                 					</div>
 									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
@@ -94,7 +94,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-										<div class="input-group-text" id="basic-addon mid-mid"> 24 Hours Average</div>	
+										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Average</div>	
                                 					</div>
 									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
