--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
 						</div>
 					</div>	
 					<div class="row">
-						<div class="col-md-3 mid-top" style="background:#ffc168;height:510px;">
+						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;">
 							<span id="name"></span>
 						</div>
 						<div class="col-md-9">
@@ -150,87 +150,6 @@
 	</div>
 </section>
 <!-- //banner -->
-
-<!-- banner bottom -->
-<section class="banner-bottom py-5">
-	<div class="container py-lg-5 py-md-3">
-		<div class="row bot-grids">
-			<div class="col-lg-6">
-				<h4 class="mb-3">Ultimate design and experiences with story, emotion and purpose</h4>
-				<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
-					sollicit udin velit. semper at tempus vel, ultrices in ligula leo id viverra feugiat.</p>
-			</div>
-			<div class="col-lg-6 text-center position-relative pl-lg-5 mt-lg-0 mt-4">
-				<div class="bot-grid">
-					<span class="fa fa-desktop"></span>
-					<h5 class="my-3">Trending Creative Design.</h5>
-				</div>
-				<div class="bot-grid1 position-absolute">
-					<span class="fa fa-building"></span>
-					<h5 class="my-3">Ultimate New Technology.</h5>
-				</div>
-				<div class="bot-grid2 position-absolute">
-					<span class="fa fa-cogs"></span>
-					<h5 class="my-3">Brand Source Experience.</h5>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- //banner bottom -->
-
-<!-- Services -->
-<section class="services bg-light py-5" id="ideas">
-	<div class="container py-lg-5 py-3">
-		<h4 class="heading text-capitalize text-center mb-lg-5 mb-4 pb-2">We Create digital ideas that are bigger, bolder, braver and better.</h4>
-		<div class="row service-grids">
-			<div class="col-lg-4 col-md-6">
-				<div class="grid1 text-center p-4 bg-white">
-					<span class="fa fa-building"></span>
-					<h5 class="my-3">Newest technology.</h5>
-					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6 mt-lg-0 mt-md-5 mt-4">
-				<div class="grid2 text-center p-4 bg-white">
-					<span class="fa fa-users"></span>
-					<h5 class="my-3">Love to work together.</h5>
-					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6 mt-lg-0 mt-md-5 mt-4">
-				<div class="grid3 text-center p-4 bg-white">
-					<span class="fa fa-product-hunt"></span>
-					<h5 class="my-3">Amazing Products.</h5>
-					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6 mt-md-5 mt-4">
-				<div class="grid4 text-center p-4 bg-white">
-					<span class="fa fa-desktop"></span>
-					<h5 class="my-3">Inspired design.</h5>
-					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6 mt-md-5 mt-4">
-				<div class="grid5 text-center p-4 bg-white">
-					<span class="fa fa-arrows"></span>
-					<h5 class="my-3">Attention to details.</h5>
-					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6 mt-md-5 mt-4">
-				<div class="grid6 text-center p-4 bg-white">
-					<span class="fa fa-cogs"></span>
-					<h5 class="my-3">Free updates & support.</h5>
-					<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- //Services -->
-
 <!-- how it works -->
 <section class="about py-5" id="how">
 	<div class="container py-md-5">
@@ -270,6 +189,7 @@
 		</div>
 	</div>
 </section>
+		<div></div>		
 <!-- //newsletter-->
 
 
