--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
 						</div>
 					</div>	
 					<div class="row">
-						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;">
+						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
 							<span id="name"></span>
 						</div>
 						<div class="col-md-9">
