--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours High</div>	
                                 					</div>
-									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
+									<input type="text" class="form-control mid-input" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
                            				 </div>
 						</div>
@@ -86,7 +86,7 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Low</div>	
                                 					</div>
-									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
+									<input type="text" class="form-control mid-input" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
                            				 </div>
 						</div>
@@ -96,7 +96,7 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Average</div>	
                                 					</div>
-									<input type="text" class="form-control" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
+									<input type="text" class="form-control mid-input" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
                            				 </div>
 						</div>
