--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
 					</div>	
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
-							<span id="name"></span>
+							<span class="flag"></span>
 						</div>
 						<div class="col-md-9">
 							<center><div class="tradingview-widget-container">
