--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,10 @@
 					</div>	
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
-							<span class="flag"></span>
+							<span class="flag">
+								<h1>9</h1>
+								<p>Rank</p>
+							</span>
 						</div>
 						<div class="col-md-9">
 							<center><div class="tradingview-widget-container">
