--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,11 @@
 					<div class="col-md-12">
 					<div class="row uper" style="padding-bottom:12px;">
 						<div class="col-md-3 mid-top">
-							<span id="name"></span>
+							<span class="flag">
+								<h1>9</h1>
+								<p>Rank</p>
+							</span>
+							<span>TRON</span>
 						</div>
 						<div class="col-md-6 mid-top mid-price">
 							<span id="price"></span>
@@ -103,10 +107,7 @@
 					</div>	
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
-							<span class="flag">
-								<h1>9</h1>
-								<p>Rank</p>
-							</span>
+							
 						</div>
 						<div class="col-md-9">
 							<center><div class="tradingview-widget-container">
