--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 							</span>
 							<span>TRON</span>
 						</div>
-						<div class="col-md-6 mid-top mid-price">
+						<div class="col-md-6 mid-price">
 							<span id="price"></span>
 						</div>
 						<div class="col-md-3 mid-top">
