--- a/public/index.html
+++ b/public/index.html
@@ -61,10 +61,10 @@
 					<div class="row uper" style="padding-bottom:12px;">
 						<div class="col-md-3 mid-top">
 							<span class="flag">
-								<h1>9</h1>
+								<h2>9</h2>
 								<p>Rank</p>
 							</span>
-							<span>TRON</span>
+							<span><h1>TRON</h1></span>
 						</div>
 						<div class="col-md-6 mid-price">
 							<span id="price"></span>
