--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 								<h2>9</h2>
 								<p>Rank</p>
 							</span>
-							<span><h1>TRON</h1></span>
+							<span>TRON</span>
 						</div>
 						<div class="col-md-6 mid-price">
 							<span id="price"></span>
@@ -158,7 +158,7 @@
 </section>		
 <!-- //newsletter-->		
 <!-- how it works -->
-<section class="about py-5" id="how">
+<section class="about py-5" id="how" style="margin-bottom:130px;">
 	<div class="container py-md-5">
 		<div class="row about-grids">
 			<div class="col-lg-6">
