--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,12 @@
 					</div>	
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
-							
+							<div class="col-md-9 mid-price">
+								<span id="price"></span>
+							</div>
+							<div class="col-md-9 mid-price">
+								<span id="price"></span>
+							</div>
 						</div>
 						<div class="col-md-9">
 							<center><div class="tradingview-widget-container">
