--- a/public/index.html
+++ b/public/index.html
@@ -108,10 +108,10 @@
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
 							<div class="col-md-9 mid-price">
-								<span id="price"></span>
+								<span id="supply"></span>
 							</div>
 							<div class="col-md-9 mid-price">
-								<span id="price"></span>
+								<span id="maxsupply"></span>
 							</div>
 						</div>
 						<div class="col-md-9">
