--- a/public/index.html
+++ b/public/index.html
@@ -108,10 +108,13 @@
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
 							<div class="col-md-9 mid-price">
-								<span id="supply"></span>
+								<span>Market Cap</span><span class="left-info" id="cap"></span>
 							</div>
 							<div class="col-md-9 mid-price">
-								<span id="maxsupply"></span>
+								<span class="left-info" id="supply"></span>
+							</div>
+							<div class="col-md-9 mid-price">
+								<span class="left-info" id="volumetoday"></span>
 							</div>
 						</div>
 						<div class="col-md-9">
