--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours High</div>	
+									<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours High</div>	
                                 					</div>
 									<input type="text" class="form-control mid-input" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
@@ -88,7 +88,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Low</div>	
+									<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Low</div>	
                                 					</div>
 									<input type="text" class="form-control mid-input" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
@@ -107,13 +107,14 @@
 					</div>	
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
-							<div class="col-md-9 mid-price">
+							<div class="col-md-9">
+								<img src="https://static.coincap.io/assets/icons/trx@2x.png" class="ui tiny image">
 								<span>Market Cap</span><span class="left-info" id="cap"></span>
 							</div>
-							<div class="col-md-9 mid-price">
+							<div class="col-md-9">
 								<span class="left-info" id="supply"></span>
 							</div>
-							<div class="col-md-9 mid-price">
+							<div class="col-md-9">
 								<span class="left-info" id="volumetoday"></span>
 							</div>
 						</div>
