--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="tron" />
 	
-   <!--  <script>
-        addEventListener("load", function () {
-            setTimeout(hideURLbar, 0);
-        }, false);
-
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-        }
-    </script> -->
-	
-	<!-- css files -->
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
@@ -31,7 +20,7 @@
 		<!-- nav -->
 		<nav class="py-4 d-md-flex">
 			<div id="logo">
-				<h1> <a href="index.html"><span class="fa fa-eercast" aria-hidden="true"></span> Task</a></h1>
+				<h1> <a href="index.html"><span class="fa fa-eercast" aria-hidden="true"></span> TRON PRICE</a></h1>
 			</div>
 			<label for="drop" class="toggle">Menu</label>
 			<input type="checkbox" id="drop" />
@@ -107,14 +96,17 @@
 					</div>	
 					<div class="row">
 						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
-							<div class="col-md-9">
+							<div class="col-md-12">
 								<img src="https://static.coincap.io/assets/icons/trx@2x.png" class="ui tiny image">
-								<span>Market Cap</span><span class="left-info" id="cap"></span>
+								<span>TRON (TRX)</span>
 							</div>
-							<div class="col-md-9">
-								<span class="left-info" id="supply"></span>
+							<div class="col-md-12">
+								<span style="font-size:20px;">Market Cap</span><span class="left-info" id="cap"></span>
 							</div>
-							<div class="col-md-9">
+							<div class="col-md-12">
+								<span style="font-size:20px;">Market Cap</span><span class="left-info" id="supply"></span>
+							</div>
+							<div class="col-md-12">
 								<span class="left-info" id="volumetoday"></span>
 							</div>
 						</div>
