--- a/public/index.html
+++ b/public/index.html
@@ -95,18 +95,18 @@
 						</div>
 					</div>	
 					<div class="row">
-						<div class="col-md-3 mid-top" style="background:#ffc168;height:480px;border-radius:7px;">
+						<div class="col-md-3 mid-top left-bar">
 							<div class="col-md-12">
 								<img src="https://static.coincap.io/assets/icons/trx@2x.png" class="ui tiny image">
 								<span>TRON (TRX)</span>
 							</div>
-							<div class="col-md-12">
+							<div class="col-md-12 bar-para">
 								<span style="font-size:20px;">Market Cap</span><span class="left-info" id="cap"></span>
 							</div>
-							<div class="col-md-12">
+							<div class="col-md-12 bar-para">
 								<span style="font-size:20px;">Market Cap</span><span class="left-info" id="supply"></span>
 							</div>
-							<div class="col-md-12">
+							<div class="col-md-12 bar-para">
 								<span class="left-info" id="volumetoday"></span>
 							</div>
 						</div>
