--- a/public/index.html
+++ b/public/index.html
@@ -96,18 +96,18 @@
 					</div>	
 					<div class="row">
 						<div class="col-md-3 mid-top left-bar">
-							<div class="col-md-12">
+							<div class="col-md-12 bar-top">
 								<img src="https://static.coincap.io/assets/icons/trx@2x.png" class="ui tiny image">
-								<span>TRON (TRX)</span>
+								<span class="bar-name">TRON (TRX)</span>
 							</div>
 							<div class="col-md-12 bar-para">
-								<span style="font-size:20px;">Market Cap</span><span class="left-info" id="cap"></span>
+								<span class="para-name">Market Cap: </span><span class="left-info" id="cap"></span>
 							</div>
 							<div class="col-md-12 bar-para">
-								<span style="font-size:20px;">Market Cap</span><span class="left-info" id="supply"></span>
+								<span class="para-name">Supply: </span><span class="left-info" id="supply"></span>
 							</div>
 							<div class="col-md-12 bar-para">
-								<span class="left-info" id="volumetoday"></span>
+								<span class="para-name">Volume 24H: </span><span class="left-info" id="volumetoday"></span>
 							</div>
 						</div>
 						<div class="col-md-9">
