--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
 <!-- newsletter -->
 <section class="subscribe-main py-5">
 	<div class="container py-md-4">
-		<h3 class="heading text-capitalize text-center">Subscribe Newsletter</h3>
+		<h3 class="heading text-capitalize text-center">TRON to USD Price calculator</h3>
 		<p  class="text-center mb-lg-5 pb-2">Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
 			sollicit udin velit. semper at.</p>
 		<div class="newsletter-info text-center p-md-4 py-md-0 py-4 px-md-0 px-4">
