--- a/public/index.html
+++ b/public/index.html
@@ -150,16 +150,22 @@
 		<p  class="text-center mb-lg-5 pb-2">Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
 			sollicit udin velit. semper at.</p>
 		<div class="newsletter-info text-center p-md-4 py-md-0 py-4 px-md-0 px-4">
+			<div class="col-md-6">
 			<div class="input-group mb-3">
                               <input type="text" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
                                 <div class="input-group-text" id="basic-addon"> TRX</div>
                               </div>
                          </div>
-			<form action="#" method="post" class="d-flex">
-				<input type="email" name="email" placeholder="Enter your Email..." required="">
-				<input type="submit" value="Subscribe">
-			</form>
+			</div>	
+			<div class="col-md-6">
+			<div class="input-group mb-3">
+                              <input type="text" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
+                              <div class="input-group-append">
+                                <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;"> TRX</div>
+                              </div>
+                         </div>
+			</div>
 		</div>
 	</div>
 </section>		
