--- a/public/index.html
+++ b/public/index.html
@@ -150,6 +150,7 @@
 		<p  class="text-center mb-lg-5 pb-2">Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
 			sollicit udin velit. semper at.</p>
 		<div class="newsletter-info text-center p-md-4 py-md-0 py-4 px-md-0 px-4">
+		<div class="row">	
 			<div class="col-md-6">
 			<div class="input-group mb-3">
                               <input type="text" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
@@ -162,10 +163,11 @@
 			<div class="input-group mb-3">
                               <input type="text" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
-                                <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;"> TRX</div>
+                                <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> TRX</div>
                               </div>
                          </div>
 			</div>
+		</div>	
 		</div>
 	</div>
 </section>		
