--- a/public/index.html
+++ b/public/index.html
@@ -153,15 +153,15 @@
 		<div class="row">	
 			<div class="col-md-6">
 			<div class="input-group mb-3">
-                              <input type="text" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
+                              <input type="text" style="max-width: 35%;" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
-                                <div class="input-group-text" id="basic-addon"> TRX</div>
+                                <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> TRX</div>
                               </div>
                          </div>
 			</div>	
 			<div class="col-md-6">
 			<div class="input-group mb-3">
-                              <input type="text" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
+                              <input type="text" style="max-width: 35%;" class="form-control" name="" id="pool_dividend" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
                                 <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> TRX</div>
                               </div>
