--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
 		<div class="row">	
 			<div class="col-md-6">
 			<div class="input-group mb-3">
-                              <input type="text" style="max-width: 35%;" class="form-control" name="" id="trx_input" aria-describedby="helpId" placeholder="">
+                              <input type="text" style="max-width: 35%;" class="form-control" value="1" id="trx_input" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
                                 <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> TRX</div>
                               </div>
@@ -163,7 +163,7 @@
 			<div class="input-group mb-3">
                               <input type="text" style="max-width: 35%;" class="form-control" name="" id="usd_price" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
-                                <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> TRX</div>
+                                <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> USD</div>
                               </div>
                          </div>
 			</div>
