--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
 		<div class="newsletter-info text-center p-md-4 py-md-0 py-4 px-md-0 px-4">
 		<div class="row">	
 			<div class="col-md-6">
-			<div class="input-group mb-3">
+			<div class="input-group mb-3" style="justify-content: flex-end;">
                               <input type="text" style="max-width: 55%;font-size:2rem;" class="form-control" value="1" id="trx_input" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
                                 <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> TRX</div>
