--- a/public/index.html
+++ b/public/index.html
@@ -153,10 +153,10 @@
 		<div class="row">	
 			<div class="col-md-6">
 			<div class="input-group mb-3" style="justify-content: flex-end;">
-                              <input type="text" style="max-width: 55%;font-size:2rem;" class="form-control" value="1" id="trx_input" aria-describedby="helpId" placeholder="">
-                              <div class="input-group-append">
+				<div class="input-group-prepend">
                                 <div class="input-group-text" id="basic-addon" style="background:#292929;border-color:#292929;color:#fff;line-height:2;"> TRX</div>
-                              </div>
+                              	</div>
+                              	<input type="text" style="max-width: 55%;font-size:2rem;" class="form-control" value="1" id="trx_input" aria-describedby="helpId" placeholder="">
                          </div>
 			</div>	
 			<div class="col-md-6">
