--- a/public/index.html
+++ b/public/index.html
@@ -158,8 +158,8 @@
                               	</div>
                               	<input type="text" style="max-width: 55%;font-size:2rem;" class="form-control" value="1" id="trx_input" aria-describedby="helpId" placeholder="">
                          </div>
-			</div><span>=</span>	
-			<div class="col-md-6">
+			</div><span style="font-size:36px;">=</span>	
+			<div class="col-md-5">
 			<div class="input-group mb-3">
                               <input type="text" style="max-width: 55%;font-size:2rem;" class="form-control" name="" id="usd_price" aria-describedby="helpId" placeholder="">
                               <div class="input-group-append">
