--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,9 @@
 	<div class="container py-md-5">
 		<div class="row about-grids">
 			<div class="col-lg-6">
-				<img src="images/left.png" alt="" class="img-fluid"/>
+				<div class="wb-twitter">
+					<a class="twitter-timeline" href="https://twitter.com/Tronfoundation" data-tweet-limit="3" >Tweets by Tronfoundation/a>
+				</div>
 			</div>
 			<div class="col-lg-6 grid1 mt-lg-0 mt-4">
 				<span class="fa fa-building"></span>
