--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,8 @@
 			<input type="checkbox" id="drop" />
 			<ul class="menu mt-md-2 ml-auto">
 				<li class="mr-lg-4 mr-2 active"><a href="index.html">Home</a></li>
-				<li class="mr-lg-4 mr-2"><a href="#ideas">Services</a></li>
-				<li class="mr-lg-4 mr-2"><a href="#how">How It Works</a></li>
-				<li class="mr-lg-4 mr-2"><a href="#pricing">Pricing</a></li>
-				<li class="mr-lg-4 mr-2"><a href="contact.html">Contact</a></li>
+				<li class="mr-lg-4 mr-2"><a href="#calculator">calculator</a></li>
+				<li class="mr-lg-4 mr-2"><a href="#how">Wjat Is Tron</a></li>
 			</ul>
 			<div class="login-icon mt-2">
 				<a class="user" href="contact.html">Start Project</a>
@@ -144,7 +142,7 @@
 </section>
 <!-- //banner -->
 <!-- newsletter -->
-<section class="subscribe-main py-5">
+<section class="subscribe-main py-5" id="calculator">
 	<div class="container py-md-4">
 		<h3 class="heading text-capitalize text-center">TRON to USD Price calculator</h3>
 		<p  class="text-center mb-lg-5 pb-2">Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
