--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 			<ul class="menu mt-md-2 ml-auto">
 				<li class="mr-lg-4 mr-2 active"><a href="index.html">Home</a></li>
 				<li class="mr-lg-4 mr-2"><a href="#calculator">calculator</a></li>
-				<li class="mr-lg-4 mr-2"><a href="#how">Wjat Is Tron</a></li>
+				<li class="mr-lg-4 mr-2"><a href="#how">What Is Tron</a></li>
 			</ul>
 			<div class="login-icon mt-2">
 				<a class="user" href="contact.html">Start Project</a>
@@ -176,7 +176,7 @@
 		<div class="row about-grids">
 			<div class="col-lg-6">
 				<div class="wb-twitter">
-					<a class="twitter-timeline" href="https://twitter.com/Tronfoundation" data-tweet-limit="3" >Tweets by Tronfoundation/a>
+					<a class="twitter-timeline" href="https://twitter.com/Tronfoundation" data-tweet-limit="3" >Tweets by Tronfoundation</a>
 				</div>
 			</div>
 			<div class="col-lg-6 grid1 mt-lg-0 mt-4">
