--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,8 @@
 		<div class="row about-grids">
 			<div class="col-lg-6">
 				<div class="wb-twitter">
-					<a class="twitter-timeline" href="https://twitter.com/Tronfoundation" data-tweet-limit="3" >Tweets by Tronfoundation</a>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<a class="twitter-timeline" href="https://twitter.com/Tronfoundation" data-tweet-limit="5" >Tweets by Tronfoundation</a>
 				</div>
 			</div>
 			<div class="col-lg-6 grid1 mt-lg-0 mt-4">
