--- a/public/index.html
+++ b/public/index.html
@@ -174,10 +174,10 @@
 <section class="about py-5" id="how" style="margin-bottom:130px;">
 	<div class="container py-md-5">
 		<div class="row about-grids">
-			<div class="col-lg-6">
+			<div class="col-lg-6" style="border:1px solid #111;border-radius:6px;">
 				<div class="wb-twitter">
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-					<a class="twitter-timeline" href="https://twitter.com/Tronfoundation" data-tweet-limit="5" >Tweets by Tronfoundation</a>
+					<a class="twitter-timeline" href="https://twitter.com/Tronfoundation" data-tweet-limit="1" >Tweets by Tronfoundation</a>
 				</div>
 			</div>
 			<div class="col-lg-6 grid1 mt-lg-0 mt-4">
