--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 <meta name="keywords" content="tron" />
 	
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-	<link href="css/font-awesome.min.css" rel="stylesheet">
+	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
-	<link href="//fonts.googleapis.com/css?family=Alegreya+Sans:100,100i,300,300i,400,400i,500,500i,700,700i,800,800i,900,900i" rel="stylesheet">
+	<!-- <link href="//fonts.googleapis.com/css?family=Alegreya+Sans:100,100i,300,300i,400,400i,500,500i,700,700i,800,800i,900,900i" rel="stylesheet"> -->
 
 </head>
 <body>
