--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
-	<!-- <link href="//fonts.googleapis.com/css?family=Alegreya+Sans:100,100i,300,300i,400,400i,500,500i,700,700i,800,800i,900,900i" rel="stylesheet"> -->
 
 </head>
 <body>
@@ -30,7 +29,7 @@
 				<li class="mr-lg-4 mr-2"><a href="#how">What Is Tron</a></li>
 			</ul>
 			<div class="login-icon mt-2">
-				<a class="user" href="contact.html">Start Project</a>
+				<a class="user" href="https://tronscan.org" target="_blank">Buy Tron</a>
 			</div>
 		</nav>
 		<!-- //nav -->
