--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		<!-- nav -->
 		<nav class="py-4 d-md-flex">
 			<div id="logo">
-				<h1> <a href="index.html"><span style="width:32px;height:32px;background:#fff;border-radius:50%;" aria-hidden="true"></span> TRON PRICE</a></h1>
+				<h1> <a href="index.html"><span style="width:32px;height:32px;background:#fff;border-radius:50%;" aria-hidden="true"><img src="images/tron-price.png" /></span> TRON PRICE</a></h1>
 			</div>
 			<label for="drop" class="toggle">Menu</label>
 			<input type="checkbox" id="drop" />
