--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		<!-- nav -->
 		<nav class="py-4 d-md-flex">
 			<div id="logo">
-				<h1> <a href="index.html"><span style="width:32px;height:32px;background:#fff;border-radius:50%;" aria-hidden="true"><img src="images/tron-price.png" /></span> TRON PRICE</a></h1>
+				<h1> <a href="index.html"><span style="width:32px;height:32px;background:#fff;border-radius:50%;"><img src="images/tron-price.png" style="width: 32px; height:32px;" /></span> TRON PRICE</a></h1>
 			</div>
 			<label for="drop" class="toggle">Menu</label>
 			<input type="checkbox" id="drop" />
@@ -219,10 +219,10 @@
 	<div class="container">
 		<div class="row footer-grids">
 			<div class="col-lg-2 footer-left pr-0">
-				<h2 class="logo"><a href="index.html"><span class="fa fa-eercast" aria-hidden="true"></span> Task</a></h2>
+				<h2 class="logo"><a href="index.html"><span class="fa fa-eercast" aria-hidden="true"></span> TRON PRICE</a></h2>
 			</div>
 			<div class="col-lg-8 footer-middle p-0">
-				<p>© 2018 Task. All Rights Reserved | Design by <a href="http://www.W3Layouts.com" target="_blank">W3Layouts</a></p>
+				<p>© 2018 TRON Price. All Rights Reserved</p>
 			</div>
 			<div class="col-lg-2 footer-right pl-0">
 				<ul class="social">
