--- a/public/index.html
+++ b/public/index.html
@@ -144,8 +144,7 @@
 <section class="subscribe-main py-5" id="calculator">
 	<div class="container py-md-4">
 		<h3 class="heading text-capitalize text-center">TRON to USD Price calculator</h3>
-		<p  class="text-center mb-lg-5 pb-2">Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
-			sollicit udin velit. semper at.</p>
+		<p  class="text-center mb-lg-5 pb-2">Tron calculator to get latest tron price in usd. Enter thr usd value and get tron real time price.</p>
 		<div class="newsletter-info text-center p-md-4 py-md-0 py-4 px-md-0 px-4">
 		<div class="row">	
 			<div class="col-md-6">
