--- a/public/index.html
+++ b/public/index.html
@@ -186,9 +186,8 @@
 				<h5 class="mt-md-5 mt-3 mb-2">Pellentesque libero justo, semper at</h5>
 				<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
 					sollicit udin velit. semper at.</p>
-				<h5 class="mt-3 mb-2">Pellentesque libero justo, semper at</h5>
-				<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
-					sollicit udin velit. semper at.</p>
+				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
+				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd.</p>
 			</div>
 		</div>
 	</div>
