--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 				<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
 					sollicit udin velit. semper at.</p>
 				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
-				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd.</p>
+				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegrama nd tron twitter many price prediction for trx coin are made but live tron charts can show true prediction.</p>
 			</div>
 		</div>
 	</div>
