--- a/public/index.html
+++ b/public/index.html
@@ -180,10 +180,9 @@
 			</div>
 			<div class="col-lg-6 grid1 mt-lg-0 mt-4">
 				<span class="fa fa-building"></span>
-				<h4 class="my-3">Pellentesque libero justo, semper at tempus vel, ultrices in ligula.</h4>
-				<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
-					sollicit udin velit. semper at tempus vel, ultrices in ligula leo id viverra feugiat.</p>
-				<h5 class="mt-md-5 mt-3 mb-2">Pellentesque libero justo, semper at</h5>
+				<h4 class="my-3">Tron Coin and Tron Foundation</h4>
+				<p>Tron cryptocurrency is started by Justin Sun and run by Tron Foundation. Tron crypto games made it an uprising coin on coinmarketcap listings. Apart from tron games, development on tron network is solid and keeping it in top cryptocurrency news.</p>
+				<h5 class="mt-md-5 mt-3 mb-2">Tron Price Today and Tron Analysis</h5>
 				<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
 					sollicit udin velit. semper at.</p>
 				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
