--- a/public/index.html
+++ b/public/index.html
@@ -181,10 +181,9 @@
 			<div class="col-lg-6 grid1 mt-lg-0 mt-4">
 				<span class="fa fa-building"></span>
 				<h4 class="my-3">Tron Coin and Tron Foundation</h4>
-				<p>Tron cryptocurrency is started by Justin Sun and run by Tron Foundation. Tron crypto games made it an uprising coin on coinmarketcap listings. Apart from tron games, development on tron network is solid and keeping it in top cryptocurrency news.</p>
+				<p>Tron cryptocurrency is started by Justin Sun and run by Tron Foundation. Tron crypto games made it an uprising coin on coinmarketcap listings. Apart from tron games, development on tron network like tron TR10 and TRC20 tokens, tron wallet and tron dex is solid and keeping it in top cryptocurrency news.</p>
 				<h5 class="mt-md-5 mt-3 mb-2">Tron Price Today and Tron Analysis</h5>
-				<p>Integer pulvinar leo id viverra feugiat. Pellentesque libero justo, semper at tempus vel, ultrices in ligula. Nulla
-					sollicit udin velit. semper at.</p>
+				<p>Tron price today is <span></span> and is number <span></span> in coinmarketcap listings with market cap of <span></span>. With a supply of <span></span> tron coin volume for 24 hours is <span></span>.</p>
 				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
 				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegrama nd tron twitter many price prediction for trx coin are made but live tron charts can show true prediction.</p>
 			</div>
