--- a/public/index.html
+++ b/public/index.html
@@ -183,24 +183,21 @@
 				<h4 class="my-3">Tron Coin and Tron Foundation</h4>
 				<p>Tron cryptocurrency is started by Justin Sun and run by Tron Foundation. Tron crypto games made it an uprising coin on coinmarketcap listings. Apart from tron games, development on tron network like tron TR10 and TRC20 tokens, tron wallet and tron dex is solid and keeping it in top cryptocurrency news.</p>
 				<h5 class="mt-md-5 mt-3 mb-2">Tron Price Today and Tron Analysis</h5>
-				<p>Tron price today is <span></span> and is number <span></span> in coinmarketcap listings with market cap of <span></span>. With a supply of <span></span> tron coin volume for 24 hours is <span></span>.</p>
+				<p>Tron price today is <span id="price2"></span> and tron rank is number <span id="rank2"></span> in coinmarketcap listings with market cap of <span id="cap2"></span>. With a supply of <span id="supply2"></span> tron coin volume for 24 hours is <span id="volumetoday2"></span>.</p>
 				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
 				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegrama nd tron twitter many price prediction for trx coin are made but live tron charts can show true prediction.</p>
 			</div>
 		</div>
 	</div>
 </section>
-
 <!-- how it works -->
-
-
 <!-- footer -->
 <footer class="pb-5 position-relative">
 	<!-- text -->
 	<div class="text-grid position-absolute" id="text">
 		<div class="container py-3 text-center">
 			<div class="text">
-				<h5 class="w3pvt-title">The best business phone systems and services for small businesses</h5>
+				<h5 class="w3pvt-title">TRON TOOLS and TRON NEWS</h5>
 				<p>Nulla viverra pharetra se, eget pulvinar neque pharetra ac int. placerat placerat dolor. Vestibulum at dui nunc. Nulla viverra pharetra sem.</p>
 				<a class="btn mr-2" href="contact.html"><span class="fa fa-info-circle"></span> Contact Us </a>
 			</div>
@@ -219,14 +216,6 @@
 			</div>
 			<div class="col-lg-8 footer-middle p-0">
 				<p>© 2018 TRON Price. All Rights Reserved</p>
-			</div>
-			<div class="col-lg-2 footer-right pl-0">
-				<ul class="social">
-					<li><a href="#"><span class="fa fa-facebook icon_facebook"></span></a></li>
-					<li><a href="#"><span class="fa fa-twitter icon_twitter"></span></a></li>
-					<li><a href="#"><span class="fa fa-dribbble icon_dribbble"></span></a></li>
-					<li class="mr-0"><a href="#"><span class="fa fa-google-plus icon_g_plus"></span></a></li>
-				</ul>
 			</div>
 		</div>
 	</div>
