--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 					<div class="row uper" style="padding-bottom:12px;">
 						<div class="col-md-3 mid-top">
 							<span class="flag">
-								<h2>9</h2>
+								<h2><span id="rank"></span></h2>
 								<p>Rank</p>
 							</span>
 							<span>TRON</span>
@@ -64,7 +64,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-									<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours High</div>	
+										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours High</div>	
                                 					</div>
 									<input type="text" class="form-control mid-input" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
@@ -74,7 +74,7 @@
 							<div class="form-group">
                               					<div class="input-group mb-3">
 									<div class="input-group-prepend">
-									<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Low</div>	
+										<div class="input-group-text mid-mid" id="basic-addon"> 24 Hours Low</div>	
                                 					</div>
 									<input type="text" class="form-control mid-input" name="" id="pool_value_dividend" aria-describedby="helpId" placeholder="">
                              					</div>
@@ -198,8 +198,8 @@
 		<div class="container py-3 text-center">
 			<div class="text">
 				<h5 class="w3pvt-title">TRON TOOLS and TRON NEWS</h5>
-				<p>Nulla viverra pharetra se, eget pulvinar neque pharetra ac int. placerat placerat dolor. Vestibulum at dui nunc. Nulla viverra pharetra sem.</p>
-				<a class="btn mr-2" href="contact.html"><span class="fa fa-info-circle"></span> Contact Us </a>
+				<p>If you are looking for information on tron tools like tron energy, tron bandwidth, tron tokens and latest tron news then get in touch with the tron community.</p>
+				<a class="btn mr-2" href="https://discord.gg/hd6SJEY" target="_blank"><span class="fa fa-info-circle"></span> Contact Us </a>
 			</div>
 		</div>
 	</div>
@@ -212,7 +212,7 @@
 	<div class="container">
 		<div class="row footer-grids">
 			<div class="col-lg-2 footer-left pr-0">
-				<h2 class="logo"><a href="index.html"><span class="fa fa-eercast" aria-hidden="true"></span> TRON PRICE</a></h2>
+				<h2 class="logo"><a href="index.html"><span><img src="images/trx-logo.png" style="width: 32px; height:32px;" /></span><span style="font-size:12px;"> TRON PRICE</span></a></h2>
 			</div>
 			<div class="col-lg-8 footer-middle p-0">
 				<p>© 2018 TRON Price. All Rights Reserved</p>
