--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 	<!-- <link href="css/font-awesome.min.css" rel="stylesheet">-->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -183,7 +184,7 @@
 				<h4 class="my-3">Tron Coin and Tron Foundation</h4>
 				<p>Tron cryptocurrency is started by Justin Sun and run by Tron Foundation. Tron crypto games made it an uprising coin on coinmarketcap listings. Apart from tron games, development on tron network like tron TR10 and TRC20 tokens, tron wallet and tron dex is solid and keeping it in top cryptocurrency news.</p>
 				<h5 class="mt-md-5 mt-3 mb-2">Tron Price Today and Tron Analysis</h5>
-				<p>Tron price today is <span id="price2"></span> and tron rank is number <span id="rank2"></span> in coinmarketcap listings with market cap of <span id="cap2"></span>. With a supply of <span id="supply2"></span> tron coin volume for 24 hours is <span id="volumetoday2"></span>.</p>
+				<p>Live Tron price today is <span id="price2"></span> and tron rank is number <span id="rank2"></span> in coinmarketcap listings with market cap of <span id="cap2"></span>. With a supply of <span id="supply2"></span> tron coin volume for 24 hours is <span id="volumetoday2"></span>.</p>
 				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
 				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegrama nd tron twitter many price prediction for trx coin are made but live tron charts can show true prediction.</p>
 			</div>
