--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
 <section class="subscribe-main py-5" id="calculator">
 	<div class="container py-md-4">
 		<h3 class="heading text-capitalize text-center">TRON to USD Price calculator</h3>
-		<p  class="text-center mb-lg-5 pb-2">Tron calculator to get latest tron price in usd. Enter thr usd value and get tron real time price.</p>
+		<p  class="text-center mb-lg-5 pb-2">Tron calculator to calculate live tron price in usd. Enter usd value to get tron real time price.</p>
 		<div class="newsletter-info text-center p-md-4 py-md-0 py-4 px-md-0 px-4">
 		<div class="row">	
 			<div class="col-md-6">
@@ -186,7 +186,7 @@
 				<h5 class="mt-md-5 mt-3 mb-2">Tron Price Today and Tron Analysis</h5>
 				<p>Live Tron price today is <span id="price2"></span> and tron rank is number <span id="rank2"></span> in coinmarketcap listings with market cap of <span id="cap2"></span>. With a supply of <span id="supply2"></span> tron coin volume for 24 hours is <span id="volumetoday2"></span>.</p>
 				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
-				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegrama nd tron twitter many price prediction for trx coin are made but live tron charts can show true prediction.</p>
+				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegram and tron twitter, many price predictions for trx coin are being made but live tron charts tell true prediction.</p>
 			</div>
 		</div>
 	</div>
