--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
 				<h5 class="mt-md-5 mt-3 mb-2">Tron Price Today and Tron Analysis</h5>
 				<p>Live Tron price today is <span id="price2"></span> and tron rank is number <span id="rank2"></span> in coinmarketcap listings with market cap of <span id="cap2"></span>. With a supply of <span id="supply2"></span> tron coin volume for 24 hours is <span id="volumetoday2"></span>.</p>
 				<h5 class="mt-3 mb-2">TRX Price Prediction with Live TRON Price Chart</h5>
-				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegram and tron twitter, many price predictions for trx coin are being made but live tron charts tell true prediction.</p>
+				<p>Tron price prediction is available with real time tron chart of trx trading pair, tron to usd. On social media like tron reddit, telegram and tron twitter, many price predictions for trx coin are being made but live tron charts can predict tron price correctly.</p>
 			</div>
 		</div>
 	</div>
